--- a/ReviewClassics/Mathematical_method_of_Classical_mechanics/Chapter_1.tex
+++ b/ReviewClassics/Mathematical_method_of_Classical_mechanics/Chapter_1.tex
@@ -1,1 +1,20 @@
+\documentclass[pdf]{article}
+\usepackage{pst-node}
+\usepackage{amssymb}
 
+\usepackage{tikz-cd} 
+\usepackage{amsmath}
+\usepackage{amsthm}
+
+\newtheorem{theorem}{Theorem}[section]
+\newtheorem{corollary}{Corollary}[theorem]
+\newtheorem{lemma}[theorem]{Lemma}
+\newtheorem{problem}[theorem]{Problem}
+
+
+\begin{document}
+\begin{lemma}.
+\end{lemma}
+\begin{proof}.
+\end{proof}
+\end{document} 
