adding a book and a project
adding a book 物理世界的数学奇迹，
adding a project: randomThought

--- a/ReviewClassics/Mathematical_method_of_Classical_mechanics/Chapter_1.tex
+++ b/ReviewClassics/Mathematical_method_of_Classical_mechanics/Chapter_1.tex
@@ -139,4 +139,21 @@ For any given energy function, we can always define a vectore field with $\dot{x
 \end{align*}
 \end{subnote}
 \end{note}
+
+\section{2021-02-19 Thoughts}
+\begin{note}[Mathematics Note: Mathematics is more "Flat" then we thought]
+People are mostly amazed by the fact that some very deep results from different math subjects can be connected by a simple form. For example Atiyah–Singer index theory. Or some other simpler examples such as: any subgroup of a free group is also a free group. This algebriac fact can be simply proved by fundamental group of graph and the covering space of graph. We can think these are accident and they are just beautiful and rare. But the other way to think about it is that Math is "Flat" and all the objects in Math can be connected by a very short path, nothing is deep but just the whole thing is flat. But we are not looking at Math from the best way, and naively believe we are looking at some deep results, and being amazed when we found those "deep" results are actually connected.
+\end{note}
+
+\begin{note}[Physics Note: If the Universe is not simply connected]
+We were interpreting the universe as a fiber bundle over a 4-dim space time, and the fibers can be compact Calabi-Yau manifold. It can also be interpreted as a map(smooth) from a 4-dim space time manifold to the modulie space of Calabi-Yau manifolds. Now one question is that, if the moduli space is not simply connected (need to double check), and if the universe itself is also not simply connected, then it is possible that after a inter-staller travelling, the whole physics law is changed to this traveller. And what will happen when this traveller communicate with those who didn't travel? Do they see different physics? (Just like those people whole travel around the Earth, will have different calendar with the ones waiting at home)\\
+If this is possible, then what will happen if a light travel this long way, and we observet it two times? do we see different photon, or this time it is photon, and the next time it will become Neutrino? or a electron will change to a positive electron? And what is the statistical effect of all these, are we able to tell if these is such thing at all?\\
+If we can prove the whole universe should have positive mass, then can we prove the whole universe (4-dim) underlying space is simply connected?
+\end{note}
+
+\section{2021-03-02 Thoughts}
+\begin{note}[Gravity is Special]
+Force and inertia defines dynamic system through $a = F/m$. And Electromagnetic Force is determined by the corresponding fields and the electric charge on the subject. While gravity is very special in the sense that the force itself also determined by the inertia of this subject $F = GMm/r^2$. 
+\end{note}
+
 \end{document} 
