Adding real random and crazy thoughts

--- a/RandomThoughts/RandomThoughts.tex
+++ b/RandomThoughts/RandomThoughts.tex
@@ -170,4 +170,18 @@ So we get the two triangular formulas
 The concept of rotation is foudamental in geometry, and the concept of linear map is also foundamental. So the above should serve as a valid proof. And the follow graph can translate the above proof to the language of middle school geometry.\\
 \includegraphics{triangular_formula}
 One interesting observation here is that: triangular formulas don't require the pythagorean theorem, in particular, we don't need to use $\cos\theta^2 + \sin\theta^2 = 1.$
+
+\section{Real Random Though}
+\subsection{Quantum computing, neural network, consciousness, probability theory}
+\begin{itemize}
+\item How quantum computing can help Machine Learning?
+\item How quantum mechenics can help explaining consciousness?
+\item How Neural network is helping modeling brain?
+\item whether quantum algorithm is better than classical algorithm? Can quantum computer be simulatable by classical computer?
+\item P = NP ?
+\item do we need new formulation of probability theory for better understanding of all above?
+\end{itemize}
+
+
+
 \end{document} 
